<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MS">MS</string>
    <string name="Mplus">M+</string>
    <string name="Mminus">M-</string>
    <string name="edit_message">0</string>
    <string name="backspace">&lt;-</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="plusMinus">+-</string>
    <string name="sqrt">sqrt</string>
    <string name="numb7">7</string>
    <string name="numb8">8</string>
    <string name="numb9">9</string>
    <string name="slash">/</string>
    <string name="procent">%</string>
    <string name="numb4">4</string>
    <string name="numb5">5</string>
    <string name="numb6">6</string>
    <string name="mult">*</string>
    <string name="div">1/x</string>
    <string name="numb1">1</string>
    <string name="numb2">2</string>
    <string name="numb0">0</string>
    <string name="numb3">3</string>
    <string name="minus">-</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="result">=</string>

</resources>