<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_message"
            android:id="@+id/resultField" />
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            
       		<TableLayout android:layout_width="wrap_content"
           		android:layout_height="match_parent"
           		android:layout_weight="3">
           		<TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/MC"
           		    	android:layout_weight="1"/>
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/MR"
           		    	android:layout_weight="1"/>
           		</TableRow>
           		
           		<TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/backspace"
           		    	android:layout_weight="1"/>
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/CE"
           		    	android:layout_weight="1"/>
           		</TableRow>
           		
           		<TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/numb7"
           		    	android:id="@+id/btn7"
           		    	android:layout_weight="1"/>
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/numb8"
           		    	android:id="@+id/btn8"
           		    	android:layout_weight="1"/>
           		</TableRow>
           		
           		<TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/numb4"
           		    	android:id="@+id/btn4"
           		    	android:layout_weight="1"/>
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/numb5"
           		    	android:id="@+id/btn5"
           		    	android:layout_weight="1"/>
           		</TableRow>
           		
           		<TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">

           			<Button
           			    android:id="@+id/btn1"
           			    android:layout_width="match_parent"
           			    android:layout_height="match_parent"
           			    android:layout_weight="1"
           			    android:text="@string/numb1" />

           			<Button
           			    android:id="@+id/btn2"
           			    android:layout_width="match_parent"
           			    android:layout_height="match_parent"
           			    android:layout_weight="1"
           			    android:text="@string/numb2" />

           		</TableRow>
           		
           		<Button
           		    android:id="@+id/btn0"
           		    android:layout_width="wrap_content"
           		    android:layout_height="wrap_content"
           		    android:layout_weight="1"
           		    android:text="@string/numb0" />

       		</TableLayout>
       
       		<TableLayout android:layout_width="wrap_content"
       		    android:layout_height="match_parent"
       		    android:layout_weight="3">
           		
       		    <TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/MS"
           		    	android:layout_weight="1"/>
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/Mplus"
           		    	android:layout_weight="1"/>
           		</TableRow>
           		
       		    <TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/C"
           		    	android:layout_weight="1"/>
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/plusMinus"
           		    	android:layout_weight="1"/>
           		</TableRow>
           		
       		    <TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/numb9"
           		    	android:id="@+id/btn9"
           		    	android:layout_weight="1"/>
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/slash"
           		    	android:layout_weight="1"/>
           		</TableRow>
           		
       		    <TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/numb6"
           		    	android:id="@+id/btn6"
           		    	android:layout_weight="1"/>
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/mult"
           		    	android:layout_weight="1"
           		    	android:id="@+id/btnMult"/>
           		</TableRow>
           
       		    <TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">

           			<Button
           			    android:id="@+id/btn3"
           			    android:layout_width="match_parent"
           			    android:layout_height="match_parent"
           			    android:layout_weight="1"
           			    android:text="@string/numb3" />

           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/minus"
           		    	android:id="@+id/btnMinus"
           		    	android:layout_weight="1"/>
           		</TableRow>
           		
       		    <TableRow android:layout_width="match_parent"
           		android:layout_height="match_parent"
           		android:layout_weight="1">
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/point"
           		    	android:layout_weight="1"/>
           			<Button android:layout_width="match_parent"
           		    	android:layout_height="match_parent"
           		    	android:text="@string/plus"
           		    	android:id="@+id/btnPlus"
           		    	android:layout_weight="1"/>
           		</TableRow>
       		</TableLayout>
       
       		<LinearLayout android:layout_width="wrap_content"
       		    android:layout_height="match_parent"
       		    android:layout_weight="1"
       		    android:layout_weightSum="6"
       		    android:orientation="vertical">
       			<LinearLayout android:layout_width="match_parent"
       		    	android:layout_height="wrap_content"
       		    	android:layout_weight="2"
       		    	android:layout_weightSum="8"
       		    	android:orientation="vertical">
       		    
       		    	<Button android:layout_width="match_parent"
           		    	android:layout_height="wrap_content"
           		    	android:text="@string/Mminus"
           		    	android:layout_weight="2"/>
           
       		    	<Button android:layout_width="match_parent"
           		    	android:layout_height="wrap_content"
           		    	android:text="@string/sqrt"
           		    	android:layout_weight="2"/>
       		    
       		    	<Button android:layout_width="match_parent"
           		    	android:layout_height="wrap_content"
           		    	android:text="@string/procent"
           		    	android:layout_weight="2"/>
       		    
       		    	<Button android:layout_width="match_parent"
           		    	android:layout_height="wrap_content"
           		    	android:text="@string/div"
           		    	android:id="@+id/btnDiv"
           		    	android:layout_weight="2"/>
       		   
       			</LinearLayout>
       			<Button android:layout_width="match_parent"
           		    android:layout_height="wrap_content"
           		    android:text="@string/result"
           		    android:layout_weight="4"
           		    android:id="@+id/btnResult"/>
       		</LinearLayout>
       </LinearLayout>
       
    </LinearLayout>

</RelativeLayout>